baml_language/crates/baml_tests/snapshots/compiles/function_call/baml_tests__compiles__function_call__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.array_length() -> int  [expr] {
  { let array = [1, 2, 3]; return baml.Array.length(array) }
}
class user.Baz {
  name: string
}
function user.Bar() -> int  [expr] {
  { let x = Foo(1) } x
}
function user.Foo(x: int) -> int  [expr] {
  {  } x Add 1
}
function user.GreetBaz(n: string) -> string  [expr] {
  { let baz = user.Baz { name: n } } baz.Greeting()
}
function user.Greeting(self: ?) -> string  [expr] {
  {  } "Hello, " Add self.name Add "!"
}
function user.from_json(j: baml.json.json) -> user.Baz  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.param_in_if_statement(b: bool) -> int  [expr] {
  {  } if (b) {  } 1 else {  } 2
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "name": self.name.to_json() }
}
