baml_language/crates/baml_tests/snapshots/compiles/function_call/baml_tests__compiles__function_call__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.array_length() -> int throws never {
  { : never
    let array = [1, 2, 3] : int[]
    return baml.Array.length(array) : int
  }
}
function user.Bar() -> int throws never {
  { : int
    let x = Foo(1) : int
    x : int
  }
}
function user.Foo(x: int) -> int throws never {
  { : int
    x + 1 : int
  }
}
function user.GreetBaz(n: string) -> string throws never {
  { : string
    let baz = Baz { name: n } : user.Baz
    baz.Greeting() : string
  }
}
class user.Baz {
  name: string
}
function user.Baz.Greeting(self: user.Baz) -> string throws never {
  { : string
    "Hello, " + self.name + "!" : string
  }
}
function user.Baz.to_json(self: user.Baz) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "name": self.name.to_json() } : map<string, baml.json.json>
}
function user.Baz.from_json(j: baml.json.json) -> user.Baz throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.Baz
}
function user.param_in_if_statement(b: bool) -> int throws never {
  { : 1 | 2
    if (b : bool) : 1 | 2
      { : 1
        1 : 1
      }
    else
      { : 2
        2 : 2
      }
  }
}
class user.Baz$stream {
  name: null | string
}
