baml_language/crates/baml_tests/snapshots/compiles/function_call/baml_tests__compiles__function_call__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 8609
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
