baml_language/crates/baml_tests/snapshots/compiles/function_call/baml_tests__compiles__function_call__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.Bar() -> int {
    load_const 1
    call user.Foo
    return
}

function user.Baz.Greeting(self: null) -> string {
    load_const "Hello, "
    load_var self
    load_field .name
    bin_op +
    load_const "!"
    bin_op +
    return
}

function user.Baz.from_json(j: baml.json.json) -> Baz {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type Baz
    load_var _2
    call baml.json.from_string
    return
}

function user.Baz.to_json(self: null) -> baml.json.json {
    load_type Baz
    load_var self
    call baml.json.to_string
    call baml.json.parse
    return
}

function user.Foo(x: int) -> int {
    load_var x
    load_const 1
    bin_op +
    return
}

function user.GreetBaz(n: string) -> string {
    alloc_instance user.Baz
    load_var n
    init_field .name
    call user.Baz.Greeting
    return
}

function user.array_length() -> int {
    load_const 1
    load_const 2
    load_const 3
    alloc_array 3
    call baml.Array.length
    return
}

function user.param_in_if_statement(b: bool) -> int {
    load_var b
    pop_jump_if_false L0
    jump L1

  L0:
    load_const 2
    jump L2

  L1:
    load_const 1

  L2:
    return
}
